manifests/network/cloudflare-operator/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-operator
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
